@@ -30,6 +30,7 @@ Version 0.2.0
 - Fixed new mode-4-grouping in shipping options
 - Fixed issues with checkbox attributes (Ticket #273)
 - Fixed fallback for deleted products throwing an exception
+- Fixed potential foreach error in IsotopePOS (Ticket #272)
 
 Version 0.2.rc1 (2010-10-31)
 ------------------------------
